# django-realtime-chat

./: .env.example  .gitignore  db.sqlite3  docker-compose.yml  pyproject.toml
apps/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py  views_ws_test.py
apps/chat/migrations/: 0001_initial.py  0002_notification_roommember.py
apps/chat/templates/chat/: ws_test.html
config/: asgi.py  routing.py  settings.py  urls.py
